--- a/index.html
+++ b/index.html
@@ -3,31 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Adding font icon so that we can use them in our code -->
+    <script src="https://kit.fontawesome.com/305dbc192b.js" crossorigin="anonymous"></script>
+
+
+    <!--directly adding cdn hosted fontawesome faicon as favcon-->
+    <link rel="icon" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6/svgs/solid/house.svg">
     <title>Document</title>
-    <link rel="stylesheet" href="css/sojurn.css">
 </head>
 <body>
-    <div class="wrapper">
-        <div class="card">
-            <h2>card one</h2>
-            <p>testing text</p>
-        </div>
-        <div class="card">
-            <h2>card two</h2>
-            <p>testing text</p>
-        </div>
-        <div class="card">
-            <h2>card three</h2>
-            <p>testing text</p>
-        </div>
-        <div class="card">
-            <h2>card four</h2>
-            <p>testing text</p>
-        </div>
-        <div class="card">
-            <h2>card five</h2>
-            <p>testing text</p>
-        </div>
-    </div>
+    
 </body>
 </html>
